# NeurusTestTask2

./: .gitignore  CMakeLists.txt  README.md
resources/: start.sh
src/: main.cpp
